[package]
name = "koilog_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
gethostname = "1.0.2"
evtx = "0.8.5" 
reqwest = {version = "0.12.22", features = ["json"]}
tokio = {version = "1.47.1", features = ["rt","rt-multi-thread","macros"]}
serde = {version = "1.0.219",features = ["derive"]}
serde_json = "1.0.142"
quick-xml = "0.38.1"
chrono={version="0.4.41",features=["serde"]}
xmltree = "0.10"