[package]
name = "koilog_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
gethostname = "1.0.2"
evtx = "0.8.5" 
reqwest = { version = "0.12.22", features = ["blocking", "json"] }
tokio = {version = "1.47.1", features = ["full"]}
serde = {version = "1.0.219",features = ["derive"]}
serde_json = "1.0.142"
quick-xml = "0.38.1"
chrono={version="0.4.41",features=["serde"]}
xmltree = "0.10"
configparser = "3.1.0"
thiserror = "2.0.16"
